2011-04-28  Sam Steingold  <sds@gnu.org>

	fix bug#3292605: GET-PROPERTY unpacks properties incorrectly on 64bit
	http://www.x.org/releases/X11R7.6/doc/man/man3/XChangeProperty.3.xhtml
	format = 8/16/32 means char/short/long, __NOT__ int8/int16/int32
	* modules/clx/new-clx/clx.f (get_client_message_format1): add,
	return the format_bytesize in addition to the actual format
	(get_client_message_format): call it
	(XLIB:CHANGE-PROPERTY): use it instead of format/8
	(make_client_message_data, XLIB:GET-PROPERTY):
	use fixnum & L_to_I for conversion instead of make_int*
	(get_client_message_data, coerce_into_map):
	use get_fixnum & I_to_L for conversion instead of get_int*
	* modules/clx/new-clx/clx.lisp (decode-wm-size-hints): revert the
	ZEROP check accidentally committed on 2009-09-18

2011-04-27  Elliott Slaughter  <elliottslaughter@gmail.com>

	* win32msvc/nsis/install.nsi: Fix PATH bug by insisting that packager
	uses long strings version of NSIS. Also upgrade EnvVarUpdate library.
	* win32msvc/nsis/add_to_path.nsh: Obsoleted by env_var_update.nsh.
	* win32msvc/nsis/env_var_update.nsh: Added to supercede add_to_path.nsh.
	* makemake.in: Use env_var_update.nsh rather than add_to_path.nsh.

2011-04-22  Sam Steingold  <sds@gnu.org>

	* places.lisp (setf-VALUES-aux): even if subform sets no values,
	it should consume one assigned value (bug#3291585)

2011-04-21  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (CP): new variable; do _not_ pass "-u" so that
	fresh checkouts will not override updating in build-aux-update et al
	(LIBTOOL_VERSION): bump to 2.4
	(build-aux-update): get compile & ylwrap from a specific automake
	version instead of whatever happens to be currently installed

2011-04-18  Sam Steingold  <sds@gnu.org>

	* configure (makemake_args): when configure detects mingw/msys,
	pass --win32gcc to makemake
	Reported by Elliott Slaughter <elliottslaughter@gmail.com>.

2011-04-15  Sam Steingold  <sds@gnu.org>
