@@ -259,8 +259,8 @@ NIL
 *ACCESS-HOSTS*
 (xlib:add-access-host *dpy* "localhost") NIL
 (every (lambda (x)
-         (or (posix:hostent-p x)
-             (and (listp x) (eq (car x) :SERVER-INTERPRETED))))
+         (or (posix:hostent-p x) (keywordp x) (integerp x)
+             (and (consp x) (or (keywordp (car x)) (integerp (car x))))))
        (show (xlib:access-hosts *dpy*) :pretty t)) T
 (xlib:remove-access-host *dpy* "localhost") NIL
 (equalp *access-hosts* (show (xlib:access-hosts *dpy*) :pretty t)) T
